<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.nordicway.interchange</groupId>
    <artifactId>interchange-parent</artifactId>
    <version>1.0.3-SNAPSHOT</version>

    <packaging>pom</packaging>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github NordicWayInterchange Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/NordicWayInterchange/interchange</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.0.0</version>
                    <configuration>
                        <inceptionYear>2019</inceptionYear>
                        <organizationName>Nordic Way 3</organizationName>
                        <licenseName>mit</licenseName>
                    </configuration>
                </plugin>
<!--
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
-->
                <plugin>
                    <!-- unit tests are named *Test.java, Run with 'mvn test' -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-dependencies.version}</version>
                </plugin>

                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                    <configuration>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <properties>
        <license.licenseName>mit</license.licenseName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <spring-boot-dependencies.version>3.2.0</spring-boot-dependencies.version>
        <!--
        <spring-boot-dependencies.version>3.0.13</spring-boot-dependencies.version>
        -->
        <picocli-version>4.7.5</picocli-version>
        <testcontainers.version>1.19.3</testcontainers.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <!--
        <spring-security.version>5.8.8</spring-security.version>
        -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <version>${spring-boot-dependencies.version}</version>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.qpid</groupId>
                <artifactId>qpid-jms-client</artifactId>
                <!-- The 1.7.* version line uses javax.jms, and 2.1.* uses jakarta.jms-->
                <version>2.5.0</version>
            </dependency>
            <dependency>
                <groupId>dnsjava</groupId>
                <artifactId>dnsjava</artifactId>
                <version>3.5.3</version>
            </dependency>
            <dependency>
                <groupId>org.apache.qpid</groupId>
                <artifactId>qpid-broker-core</artifactId>
                <version>9.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli-version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.77</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>1.77</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>IT</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- Integration tests are named *IT.java, Run with 'mvn verify' -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.2</version>
                        <configuration>
                            <includes>
                                <include>*IT</include>
                            </includes>
                            <skipAfterFailureCount>1</skipAfterFailureCount>
                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>ST</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>*ST</include>
                            </includes>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <modules>
        <module>ssl-utils</module>
        <module>testcontainers-base</module>
        <module>testcontainers-init-postgres</module>
        <module>jms-client</module>
        <module>api-model</module>
        <module>interchange-spring-security</module>
        <module>interchange-spring-security-client</module>
        <module>interchange-spring-security-client-test</module>
        <module>neighbour-dns</module>
        <module>dns-client</module>
        <module>neighbour-model</module>
        <module>neighbour-rest-facade</module>
        <module>neighbour-service</module>
        <module>neighbour-server</module>
        <module>neighbour-discoverer</module>
        <module>routing-configurer</module>
        <module>federation-st</module>
        <module>message-collector</module>
        <module>quadtree-tool</module>
        <module>onboard-rest-api</module>
        <module>onboard-server</module>
        <module>onboard-rest-client</module>
        <module>jms-client-source</module>
        <module>jms-client-sink</module>
        <module>jms-client-image-sink</module>
        <module>jms-client-image-source</module>
        <module>jms-client-sink-app</module>
        <module>jms-client-source-app</module>
        <module>napcore-rest-api</module>
        <module>napcore-server</module>
        <module>napcore-rest-client</module>
        <module>csr-signer</module>
    </modules>
</project>
